--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
+                <configuration>
+                    <source>12</source>
+                    <target>12</target>
+                </configuration>
             </plugin>
             <!-- copy all dependencies of your app to target folder, for calling jlink or jpackager-->
             <plugin>
